Set theme jekyll-theme-cayman and migrate Page Generator content

--- a/_config.yml
+++ b/_config.yml
@@ -42,3 +42,7 @@ exclude:
 sass:
   sass_dir: assets/_sass
   style: compressed
+
+google_analytics: 
+show_downloads: true
+theme: jekyll-theme-cayman
